DBZ-1402 Support for JDK 11